--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -16,7 +16,9 @@
 -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="android.support.fragment" >
+    package="android.support.fragment" 
+    android:versionCode="2420"
+    android:versionName="24.2.0">
 
     <uses-sdk
         android:minSdkVersion="9"
