--- a/project.properties
+++ b/project.properties
@@ -17,3 +17,5 @@ android.library.reference.1=../android-support-annotations
 android.library.reference.2=../android-support-compat
 android.library.reference.3=../android-support-core-ui
 android.library.reference.4=../android-support-core-utils
+android.library.reference.5=../android-arch-lifecycle-livedata-core
+android.library.reference.6=../android-arch-lifecycle-viewmodel
