--- a/.classpath
+++ b/.classpath
@@ -9,5 +9,7 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/android-support-core-ui"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/android-support-core-utils"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/android-support-annotations"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/android-arch-lifecycle-livedata-core"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/android-arch-lifecycle-viewmodel"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
