--- a/project.properties
+++ b/project.properties
@@ -11,11 +11,11 @@
 #proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.txt
 
 # Project target.
-target=android-27
+target=android-28
 android.library=true
-android.library.reference.1=../android-support-annotations
-android.library.reference.2=../android-support-compat
-android.library.reference.3=../android-support-core-ui
-android.library.reference.4=../android-support-core-utils
-android.library.reference.5=../android-arch-lifecycle-livedata-core
-android.library.reference.6=../android-arch-lifecycle-viewmodel
+android.library.reference.1=../android-arch-lifecycle-viewmodel
+android.library.reference.2=../android-support-loader
+android.library.reference.3=../android-support-annotations
+android.library.reference.4=../android-support-compat
+android.library.reference.5=../android-support-core-ui
+android.library.reference.6=../android-support-core-utils
